--- a/House_prediction.ipynb
+++ b/House_prediction.ipynb
@@ -779,12 +779,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prediction par la méthode des moindres carrés "
+    "## Paramètres optimaux de Theta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -800,17 +800,14 @@
    ],
    "source": [
     "def least_squares(X, y):\n",
+    "\n",
     "    # Ajoute une colonne de 1 pour prendre en compte le terme constant\n",
     "    X_augmented = np.hstack((np.ones((X.shape[0], 1)), X))\n",
     "    # Calcule les paramètres optimaux theta\n",
     "    theta_optimal = np.linalg.inv(X_augmented.T @ X_augmented) @ X_augmented.T @ y\n",
     "    return theta_optimal\n",
     "\n",
-    "\n",
     "theta_least_squares = least_squares(x, y)\n",
-    "\n",
-    "\n",
-    "# Affiche les paramètres optimaux\n",
     "print(theta_least_squares)\n"
    ]
   }
